Made a security for pages. Added Test, Answer, Question Added creating/view test with answers (for ADMIN in future) Made pages look better Delete greeting because of optimizing home page with security